Bug 462887 - Web Inspector is not fuctional when disabling JS by default
Summary: Web Inspector is not fuctional when disabling JS by default
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-11 07:33 UTC by genghiskhan
Modified: 2024-08-03 11:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description genghiskhan 2022-12-11 07:33:01 UTC
When setting JS policy to be disabled by default, Web Inspector is not fuctional
Comment 1 Juraj 2024-08-03 11:24:07 UTC
Git commit 8037c9de3bb1d666847b7f761c46c5b33c9f4edc by Juraj Oravec.
Committed on 03/08/2024 at 11:17.
Pushed by jurajo into branch 'master'.

Enable WebInspector with disabled JavaScript
FIXED-IN: 24.08.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +0    -3    src/lib/webengine/webinspector.cpp

https://invent.kde.org/network/falkon/-/commit/8037c9de3bb1d666847b7f761c46c5b33c9f4edc
Comment 2 Juraj 2024-08-03 11:27:30 UTC
Git commit 7d5bd0ca0c63914571e66afb14dd8744b7c4bdd9 by Juraj Oravec.
Committed on 03/08/2024 at 11:25.
Pushed by jurajo into branch 'release/24.08'.

Enable WebInspector with disabled JavaScript
FIXED-IN: 24.08.0

Cherry-picked from: 8037c9de3bb1d666847b7f761c46c5b33c9f4edc

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +0    -3    src/lib/webengine/webinspector.cpp

https://invent.kde.org/network/falkon/-/commit/7d5bd0ca0c63914571e66afb14dd8744b7c4bdd9