Enable WebInspector with disabled JavaScript

BUG: 462887
FIXED-IN: 24.08.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>